[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mhcgnomes"
dynamic = ["version"]
description = "Python library for parsing MHC nomenclature in the wild"
readme = "README.md"
license = "Apache-2.0"
authors = [
    {name = "Alex Rubinsteyn", email = "alex.rubinsteyn@unc.edu"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.9"
dependencies = [
    "serializable",
    "PyYAML>=5.4",
    "pandas",
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "pre-commit",
    "coveralls",
]

[project.urls]
Homepage = "https://github.com/pirl-unc/mhcgnomes"
Repository = "https://github.com/pirl-unc/mhcgnomes"

[tool.setuptools.dynamic]
version = {attr = "mhcgnomes.version.__version__"}

[tool.setuptools.packages.find]
include = ["mhcgnomes*"]

[tool.setuptools.package-data]
mhcgnomes = ["data/*.yaml"]

[tool.ruff]
target-version = "py39"
line-length = 100
src = ["mhcgnomes", "tests"]
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
    ".eggs",
]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B905",   # zip() without explicit strict
    "SIM108", # use ternary operator instead of if-else
    "UP007",  # use X | Y for type unions (need Python 3.10+)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011", "RUF012"]  # allow assert False and class-level test data
"tests/test_imgt_hla_names.py" = ["UP031"]  # generated file with many %-format strings
"tests/test_ipd_mhc_names.py" = ["UP031"]  # generated file with many %-format strings
"tests/generate_*.py" = ["UP031"]  # generator scripts
"tests/timing.py" = ["UP031", "E741"]  # timing script
"__init__.py" = ["F401"]  # allow unused imports in __init__.py
"mhcgnomes/data/*" = ["UP031"]  # data processing scripts

[tool.ruff.lint.isort]
known-first-party = ["mhcgnomes"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["mhcgnomes"]
omit = ["mhcgnomes/version.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
